# history_quiz

history_quiz/: __main__.py  config.py  create_main_db.py  create_topic_db.py  launch_cli.ps1  launch_gui.ps1  main.py  pyproject.toml
history_quiz/dev/scripts/: import_questinos.py
history_quiz/dev/seeds/: ancient_questions.csv  tudor_questions.csv
history_quiz/gui/: app.py
history_quiz/utils/: db_connection.py
