[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "history_quiz"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["history_quiz*"]
exclude = ["dev*", "dist*", "*.venv*", "venv*"]